Add two new pages - about and blog

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,5 +7,5 @@ import Layout from "../layouts/Layout.astro";
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
 
-  <h1>Home page</h1>
+  <h1>About page</h1>
 </Layout>
