Define values and use values in .astro file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
+
+const pageTitle = "Home Page";
 ---
 
 <Layout>
@@ -7,5 +9,5 @@ import Layout from "../layouts/Layout.astro";
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
 
-  <h1>Home page</h1>
+  <h1>{pageTitle}</h1>
 </Layout>
