--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import "../styles/global.css";
 
 const pageTitle = "About Me";
 
@@ -64,3 +65,10 @@ const goal = 3;
     )
   }
 </Layout>
+
+<!-- local style -->
+<style>
+  h2 {
+    color: #276cf5;
+  }
+</style>
