--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
 
 const pageTitle = "About Me";
 
@@ -19,9 +20,7 @@ const goal = 3;
 ---
 
 <Layout>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+  <Navigation />
 
   <h1>{pageTitle}</h1>
   <h2>... and my new Astro site!</h2>
