--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 
@@ -6,9 +7,7 @@ const pageTitle = "Blogs";
 ---
 
 <Layout>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+  <Navigation />
 
   <h1>{pageTitle}</h1>
   <p>This is where I will post about my journey learning Astro.</p>
