--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 
@@ -6,9 +7,7 @@ const pageTitle = "Home Page";
 ---
 
 <Layout>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+  <Navigation />
 
   <h1>{pageTitle}</h1>
 </Layout>
