--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 
 const pageTitle = "About Me";
 
@@ -63,6 +64,8 @@ const goal = 3;
       <p>My goal is not 3 days.</p>
     )
   }
+
+  <Footer />
 </Layout>
 
 <!-- local style -->
