--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
@@ -10,4 +11,6 @@ const pageTitle = "Home Page";
   <Navigation />
 
   <h1>{pageTitle}</h1>
+
+  <Footer />
 </Layout>
