--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import Navigation from "../components/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 
@@ -8,7 +8,7 @@ const pageTitle = "Blogs";
 ---
 
 <Layout>
-  <Navigation />
+  <Header />
 
   <h1>{pageTitle}</h1>
   <p>This is where I will post about my journey learning Astro.</p>
