--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import Navigation from "../components/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 
@@ -8,7 +8,7 @@ const pageTitle = "Home Page";
 ---
 
 <Layout>
-  <Navigation />
+  <Header />
 
   <h1>{pageTitle}</h1>
 
