--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,4 +1,4 @@
-<div id="main-menu" class="nav-links">
+<div id="main-menu" class="nav-links" data-open="false">
   <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
