--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,4 +13,6 @@ const pageTitle = "Home Page";
   <h1>{pageTitle}</h1>
 
   <Footer />
+
+  <!-- <script src="/scripts/menu.js" is:inline></script> -->
 </Layout>
