Create an Astro layout component with a <slot />

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-
-const pageTitle = "About Me";
 
 const identity = {
   firstName: "Sarah",
@@ -20,10 +15,7 @@ const finished = false;
 const goal = 3;
 ---
 
-<Layout>
-  <Header />
-
-  <h1>{pageTitle}</h1>
+<Layout pageTitle="About Me">
   <h2>... and my new Astro site!</h2>
 
   <p>
@@ -67,8 +59,6 @@ const goal = 3;
       <p>My goal is not 3 days.</p>
     )
   }
-
-  <Footer />
 </Layout>
 
 <!-- local style -->
