--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,22 +1,12 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
-
-const pageTitle = "Blogs";
 ---
 
-<Layout>
-  <Header />
-
-  <h1>{pageTitle}</h1>
+<Layout pageTitle="Blogs">
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
     <li><a href="/posts/post-1/">Post 1</a></li>
     <li><a href="/posts/post-2/">Post 2</a></li>
     <li><a href="/posts/post-3/">Post 3</a></li>
   </ul>
-
-  <Footer />
 </Layout>
