--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,9 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
-
-const pageTitle = "Home Page";
 ---
 
-<Layout>
-  <Header />
-
-  <h1>{pageTitle}</h1>
-
-  <Footer />
-
-  <!-- <script src="/scripts/menu.js" is:inline></script> -->
+<Layout pageTitle="Welcome to the  modern Blog website built with Astro">
+  <h2>
+    Exploring Astro, frontend engineering, and the web—one post at a time.
+  </h2>
 </Layout>
